<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="?android:attr/colorBackground">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/hey_there"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.5"
        android:color="@color/white_smoke"
        android:textColor="?android:attr/textColorPrimary"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/welcome"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:textSize="40sp"
        android:textStyle="normal"
        app:layout_constraintHorizontal_bias="0.5"
        android:color="@color/white_smoke"
        android:textColor="?android:attr/textColorPrimary"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/additional"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:textSize="40sp"
        app:layout_constraintHorizontal_bias="0.5"
        android:color="@color/white_smoke"
        android:textColor="?android:attr/textColorPrimary"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/email_placeholder"
        android:textColorHint="@color/gray_stroke"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="45dp"
        android:padding="20dp"
        android:textColor="?android:attr/textColorPrimary"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/edit_text_box"
        android:inputType="textEmailAddress" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:hint="@string/password_placeholder"
        android:textColorHint="@color/gray_stroke"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:padding="20dp"
        android:textColor="?android:attr/textColorPrimary"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/edit_text_box"
        android:inputType="textPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:background="@drawable/button_bg"
        android:padding="18dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:focusable="true"
        android:text="@string/btn_signin" />

</androidx.constraintlayout.widget.ConstraintLayout>
