<resources>
    <string name="hey_there">Hey there!</string>
    <string name="welcome">Welcome back.</string>
<!--    <string name="app_name">LoginApp</string>-->
    <string name="additional">You\'ve been missed!</string>
    <string name="email_placeholder">Email or username</string>
    <string name="password_placeholder">Password</string>
    <string name="btn_signin">Sign In</string>
    <string name="invalid_credentials_error">Invalid email or password</string>
    <string name="signin_success">Sign in successful</string>
    <string name="home_desc">Great! You\'ve made it to the HomeActivity.</string>
</resources>
